[gd_scene load_steps=7 format=3 uid="uid://wplmcs5gbc4e"]

[ext_resource type="Texture2D" uid="uid://d4dx7mttypx36" path="res://assets/art/loot/rusty_spoon.webp" id="1_gommm"]
[ext_resource type="Script" path="res://scenes/interfaces/shop/want_to_sell.gd" id="1_xf1vv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q06qu"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.607843, 0.807843, 0.65098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dai7a"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.27451, 0.596078, 0.321569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x7sjp"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.929412, 0.537255, 0.470588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yelqn"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.643137, 0.321569, 0.34902, 1)

[node name="WantToSell" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"AlphaPanel"
script = ExtResource("1_xf1vv")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"PanelWithBorder"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Are you sure you want to sell: "

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="AmountLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"HeaderMedium"
text = "10x "

[node name="LootTextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_gommm")
expand_mode = 4
stretch_mode = 4

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PriceLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"HeaderMedium"
text = "for 50 Rubber Ducks"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="YesButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_q06qu")
theme_override_styles/normal = SubResource("StyleBoxFlat_dai7a")
text = "yes sell!!"

[node name="NoButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_x7sjp")
theme_override_styles/normal = SubResource("StyleBoxFlat_yelqn")
text = "Nah keep"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
